--- a/UsersRegister/UsersRegister.vbproj
+++ b/UsersRegister/UsersRegister.vbproj
@@ -126,6 +126,17 @@
     <Compile Include="RegisterUsers.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="ReportForm.Designer.vb">
+      <DependentUpon>ReportForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="ReportForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReprotDataSet.Designer.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ReprotDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="UsersDataBaseDataSet2.Designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -144,6 +155,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="RegisterUsers.resx">
       <DependentUpon>RegisterUsers.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ReportForm.resx">
+      <DependentUpon>ReportForm.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -168,6 +182,17 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <None Include="App.config" />
+    <None Include="ReprotDataSet.xsc">
+      <DependentUpon>ReprotDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="ReprotDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>ReprotDataSet.Designer.vb</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="ReprotDataSet.xss">
+      <DependentUpon>ReprotDataSet.xsd</DependentUpon>
+    </None>
     <None Include="UsersDataBaseDataSet2.xsc">
       <DependentUpon>UsersDataBaseDataSet2.xsd</DependentUpon>
     </None>
@@ -187,8 +212,8 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="UsersDataBase_log.ldf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>UsersDataBase.mdf</DependentUpon>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <ItemGroup>
