--- a/UsersRegister/UsersRegister.vbproj
+++ b/UsersRegister/UsersRegister.vbproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <StartupObject>UsersRegister.My.MyApplication</StartupObject>
     <RootNamespace>UsersRegister</RootNamespace>
-    <AssemblyName>regUser</AssemblyName>
+    <AssemblyName>access</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>WindowsForms</MyType>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
@@ -36,9 +36,9 @@
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\Debug\</OutputPath>
-    <DocumentationFile>regUser.xml</DocumentationFile>
+    <DocumentationFile>access.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
-    <UseVSHostingProcess>true</UseVSHostingProcess>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -47,7 +47,7 @@
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DocumentationFile>regUser.xml</DocumentationFile>
+    <DocumentationFile>access.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
